// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button-block 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  padding: 0.5em 1em;
  border: 1px currentColor solid;
  background-color: transparent;
  border-radius: 2px;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  text-align: center;
  cursor: pointer;
  outline: 0;
  display: block;
  width: 100%;
  border-color: rgba(229,229,229,1);
  color: rgba(88,89,91,1);
}

.c0:disabled {
  opacity: 0.3;
  cursor: not-allowed;
}

.c0:hover:enabled,
.c0:focus:enabled {
  box-shadow: 0 2px 4px rgba(0,0,0,0.22);
}

.c0:active:enabled {
  box-shadow: none;
}

<button
  class="c0"
  type="button"
>
  hello
</button>
`;

exports[`Button-disabled 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  padding: 0.5em 1em;
  border: 1px currentColor solid;
  background-color: transparent;
  border-radius: 2px;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  text-align: center;
  cursor: pointer;
  outline: 0;
  display: inline-block;
  border-color: rgba(229,229,229,1);
  color: rgba(88,89,91,1);
}

.c0:disabled {
  opacity: 0.3;
  cursor: not-allowed;
}

.c0:hover:enabled,
.c0:focus:enabled {
  box-shadow: 0 2px 4px rgba(0,0,0,0.22);
}

.c0:active:enabled {
  box-shadow: none;
}

<button
  class="c0"
  disabled=""
  type="button"
>
  hello
</button>
`;

exports[`Button-isLoading 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  padding: 0.5em 1em;
  border: 1px currentColor solid;
  background-color: transparent;
  border-radius: 2px;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  text-align: center;
  cursor: pointer;
  outline: 0;
  display: inline-block;
  border-color: rgba(229,229,229,1);
  color: rgba(88,89,91,1);
  background-image: url(loader.gif);
  background-position: center;
  background-size: 16px;
  background-repeat: no-repeat;
  color: rgba(0,0,0,0);
}

.c0:disabled {
  opacity: 0.3;
  cursor: not-allowed;
}

.c0:hover:enabled,
.c0:focus:enabled {
  box-shadow: 0 2px 4px rgba(0,0,0,0.22);
}

.c0:active:enabled {
  box-shadow: none;
}

<button
  class="c0"
  type="button"
>
  hello
</button>
`;

exports[`Button-size-large 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  padding: 0.5em 1em;
  border: 1px currentColor solid;
  background-color: transparent;
  border-radius: 2px;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  text-align: center;
  cursor: pointer;
  outline: 0;
  display: inline-block;
  padding: 0.75em 1em;
  font-size: 16px;
  font-weight: 700;
  border-color: rgba(229,229,229,1);
  color: rgba(88,89,91,1);
}

.c0:disabled {
  opacity: 0.3;
  cursor: not-allowed;
}

.c0:hover:enabled,
.c0:focus:enabled {
  box-shadow: 0 2px 4px rgba(0,0,0,0.22);
}

.c0:active:enabled {
  box-shadow: none;
}

<button
  class="c0"
  type="button"
>
  hello
</button>
`;

exports[`Button-size-xlarge 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  padding: 0.5em 1em;
  border: 1px currentColor solid;
  background-color: transparent;
  border-radius: 2px;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  text-align: center;
  cursor: pointer;
  outline: 0;
  display: inline-block;
  padding: 0.9em 1em;
  font-size: 18px;
  font-weight: 700;
  border-color: rgba(229,229,229,1);
  color: rgba(88,89,91,1);
}

.c0:disabled {
  opacity: 0.3;
  cursor: not-allowed;
}

.c0:hover:enabled,
.c0:focus:enabled {
  box-shadow: 0 2px 4px rgba(0,0,0,0.22);
}

.c0:active:enabled {
  box-shadow: none;
}

<button
  class="c0"
  type="button"
>
  hello
</button>
`;

exports[`Button-variant-default 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  padding: 0.5em 1em;
  border: 1px currentColor solid;
  background-color: transparent;
  border-radius: 2px;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  text-align: center;
  cursor: pointer;
  outline: 0;
  display: inline-block;
  border-color: rgba(229,229,229,1);
  color: rgba(88,89,91,1);
}

.c0:disabled {
  opacity: 0.3;
  cursor: not-allowed;
}

.c0:hover:enabled,
.c0:focus:enabled {
  box-shadow: 0 2px 4px rgba(0,0,0,0.22);
}

.c0:active:enabled {
  box-shadow: none;
}

<button
  class="c0"
  type="button"
>
  hello
</button>
`;

exports[`Button-variant-link 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  padding: 0.5em 1em;
  border: 1px currentColor solid;
  background-color: transparent;
  border-radius: 2px;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  text-align: center;
  cursor: pointer;
  outline: 0;
  display: inline-block;
  border: none;
  color: rgba(242,103,34,1);
}

.c0:disabled {
  opacity: 0.3;
  cursor: not-allowed;
}

.c0:hover:enabled,
.c0:focus:enabled {
  box-shadow: 0 2px 4px rgba(0,0,0,0.22);
}

.c0:active:enabled {
  box-shadow: none;
}

.c0:active {
  box-shadow: none;
  color: #a43d0a;
  -webkit-text-decoration: none !important;
  text-decoration: none !important;
}

.c0:hover:enabled,
.c0:focus:enabled {
  box-shadow: none;
  color: rgba(242,103,34,0.7);
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<button
  class="c0"
  type="button"
>
  hello
</button>
`;

exports[`Button-variant-outline 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  padding: 0.5em 1em;
  border: 1px currentColor solid;
  background-color: transparent;
  border-radius: 2px;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  text-align: center;
  cursor: pointer;
  outline: 0;
  display: inline-block;
  color: rgba(242,103,34,1);
  border-color: rgba(242,103,34,1);
}

.c0:disabled {
  opacity: 0.3;
  cursor: not-allowed;
}

.c0:hover:enabled,
.c0:focus:enabled {
  box-shadow: 0 2px 4px rgba(0,0,0,0.22);
}

.c0:active:enabled {
  box-shadow: none;
}

<button
  class="c0"
  type="button"
>
  hello
</button>
`;

exports[`Button-variant-primary 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  padding: 0.5em 1em;
  border: 1px currentColor solid;
  background-color: transparent;
  border-radius: 2px;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  text-align: center;
  cursor: pointer;
  outline: 0;
  display: inline-block;
  background-color: rgba(242,103,34,1);
  border-color: rgba(242,103,34,1);
  color: white;
}

.c0:disabled {
  opacity: 0.3;
  cursor: not-allowed;
}

.c0:hover:enabled,
.c0:focus:enabled {
  box-shadow: 0 2px 4px rgba(0,0,0,0.22);
}

.c0:active:enabled {
  box-shadow: none;
}

<button
  class="c0"
  type="button"
>
  hello
</button>
`;

exports[`Button-variant-secondary 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  padding: 0.5em 1em;
  border: 1px currentColor solid;
  background-color: transparent;
  border-radius: 2px;
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1;
  text-align: center;
  cursor: pointer;
  outline: 0;
  display: inline-block;
  background-color: rgba(250,162,27,1);
  border-color: rgba(250,162,27,1);
  color: white;
}

.c0:disabled {
  opacity: 0.3;
  cursor: not-allowed;
}

.c0:hover:enabled,
.c0:focus:enabled {
  box-shadow: 0 2px 4px rgba(0,0,0,0.22);
}

.c0:active:enabled {
  box-shadow: none;
}

<button
  class="c0"
  type="button"
>
  hello
</button>
`;
